--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,50 +1,15 @@
----
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
----
-
-<!doctype html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
-	</body>
-</html>
+<main>
+    <h1>👋 Bonjour et bienvenue sur ma page !</h1>
+    <p>
+        Je me nomme Jayson Malet et je suis développeur. Cette page est un espace où je partage mes projets et mes expériences en développement.
+    </p>
+    <p>
+        Vous trouverez ici des informations sur mes réalisations, ainsi que des articles et des tutoriels sur des sujets qui me passionnent.
+    </p>
+    <p>
+        N'hésitez pas à explorer et à me contacter si vous avez des questions ou si vous souhaitez discuter de projets !
+    </p>
+    <p>
+        Amusez-vous bien ! Si vous avez besoin d'aide, consultez la <a href="https://docs.astro.build/">documentation</a> ou rejoignez-nous sur <a href="https://astro.build/chat">Discord</a>.
+    </p>
+</main>
