--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,34 @@
+---
+import BaseHead from '../components/BaseHead.astro';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+---
+
+<!doctype html>
+<html lang="fr">
+<head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+</head>
+<body>
+<Header />
 <main>
-    <h1>👋 Bonjour et bienvenue sur ma page !</h1>
+    <h1>🧑👋 Bonjour et bienvenue sur ma page !</h1>
     <p>
         Je me nomme Jayson Malet et je suis développeur. Cette page est un espace où je partage mes projets et mes expériences en développement.
     </p>
     <p>
         Vous trouverez ici des informations sur mes réalisations, ainsi que des articles et des tutoriels sur des sujets qui me passionnent.
     </p>
+    <p> N'hésitez pas à explorer et à me contacter si vous avez des questions ou si vous souhaitez discuter de projets !</p>
+    <ul>
+
+    </ul>
     <p>
-        N'hésitez pas à explorer et à me contacter si vous avez des questions ou si vous souhaitez discuter de projets !
-    </p>
-    <p>
-        Amusez-vous bien ! Si vous avez besoin d'aide, consultez la <a href="https://docs.astro.build/">documentation</a> ou rejoignez-nous sur <a href="https://astro.build/chat">Discord</a>.
+        Amusez-vous bien ! Si vous avez besoin d'aide, consultez ma page github <a href="https://github.com/jayjay1509">Github</a>
+
     </p>
 </main>
+<Footer />
+</body>
+</html>
