--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,19 +24,19 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
 <Header />
 <main>
-    <h1>🧑👋 Bonjour et bienvenue sur ma page !</h1>
+    <h1>🧑👋 Hello and welcome to my page!</h1>
     <p>
-        Je me nomme Jayson Malet et je suis développeur. Cette page est un espace où je partage mes projets et mes expériences en développement.
+        My name is Jayson Malet and I am a developer. This page is a space where I share my projects and my experiences in development.
     </p>
     <p>
-        Vous trouverez ici des informations sur mes réalisations, ainsi que des articles et des tutoriels sur des sujets qui me passionnent.
+        Here you will find information about my achievements, as well as articles and tutorials on subjects that fascinate me.
     </p>
-    <p>N'hésitez pas à explorer et à me contacter si vous avez des questions ou si vous souhaitez discuter de projets !</p>
+    <p>Feel free to explore and contact me if you have any questions or would like to discuss projects!</p>
     <ul>
-        <!-- Ajoutez du contenu ici si nécessaire -->
+        <!-- Add content here if necessary -->
     </ul>
     <p>
-        Amusez-vous bien ! Si vous avez besoin d'aide, consultez ma page github <a href="https://github.com/jayjay1509">Github</a>
+        Have fun! If you need help, check out my github page <a href="https://github.com/jayjay1509">Github</a>
     </p>
 </main>
 <Footer />
